--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@
     align-items: center;
 }
 
+.nav-items {
+    list-style: none;
+    display: flex;
+}
+
+.nav-items > li {
+    padding: 10px;
+}
+
 .react-logo {
-    width: 30px;
+    width: 60px;
 }
